--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,12 @@
 {
     "exclude": ["node_modules"],
     "compilerOptions": {
-        "target": "ES6",
-        "module": "CommonJS",
-        "moduleResolution": "node",
+        "target": "ESNext",
+        "module": "ESNext",
+        "moduleResolution": "bundler",
         "allowUmdGlobalAccess": true,
         "resolveJsonModule": true,
-        "outDir": "./dist",
+        "outDir": "dist",
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
         "strict": true,
