--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
         "dotenv": "^16.4.7"
     },
     "devDependencies": {
-        "@types/node": "^22.9.1",
-        "globals": "^15.12.0",
-        "tsx": "^4.19.2"
+        "@types/node": "^22.13.5",
+        "typescript": "^5.7.3"
     }
 }
